// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="sc-AxjAm hkFroe"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm jIOBGv"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm hkFroe"
    color="primary"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="sc-AxjAm chAqZX"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="sc-AxjAm jbWfgK"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="sc-AxjAm hkFroe"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="sc-AxjAm hRIZXi"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="sc-AxjAm fJKOo"
    color="warning"
  />
</div>
`;
